--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+  line-height: 115% !important;
+  /* font-size: 54px; */
+}
+.navbar .btn-demo {
   color: white;
+  background-color: #0b94f5;
+  max-height: 44px;
+  align-items: center;
+  border: 2px solid transparent;
+  border-radius: 9999px;
+  display: inline-flex;
+  font-family: "Inter var", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  justify-content: center;
+  letter-spacing: 0;
+  line-height: 24px;
+  transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  white-space: nowrap;
+}
+.navbar .btn-demo:hover {
+  background-color: white;
+  color: #0b94f5;
+  border: 2px solid #0b94f5;
 }
 
-.App-link {
-  color: #61dafb;
+.hero h1{
+  /* font-size: 54px; */
+  text-align: center;
+  font-weight: 600;
+}
+/* Slider-------------------- */
+.slick-slider {
+  padding: 20px 0 !important;
+  height: 600px !important;
+
+}
+.slick-list {
+  position: relative;
+  display: block;
+  padding: 50px 0 !important;
+  height: 600px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 767px) {
+  .slick-list {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0 -20% 0 0 !important;
+    padding: 0 !important;
   }
 }
+.carousel-img {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  max-width: 370px !important;
+  border-radius: 20px !important;
+  position: relative !important;
+  margin-left: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+}
+
+.carousel-img .inner-box {
+ border-radius: 20px !important;
+ height: 500px !important;
+ padding: 30px;
+}
+
+
+
+
