--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@ h1{
     position: relative;
     display: block;
     overflow: hidden;
-    margin: 0 0 0 7px !important;
+    margin: 0 !important;
     padding: 50px 0 !important;
     height: 560px !important;
   }
