--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 
-html, body{
+html,
+body {
   overflow-x: hidden !important;
 }
 
-h1{
+h1 {
   line-height: 115% !important;
-  /* font-size: 54px; */
 }
 
-.navbar{
+.navbar {
   -webkit-backdrop-filter: blur(3.5px);
   backdrop-filter: blur(3.5px);
   background: hsla(0, 0%, 100%, 0.85);
@@ -54,17 +51,15 @@ h1{
   border: 2px solid #0b94f5;
 }
 
-
-.hero h1{
-  /* font-size: 54px; */
+.hero h1 {
   text-align: center;
   font-weight: 600;
 }
+
 /* Slider-------------------- */
 .slick-slider {
   padding: 20px 0 !important;
   height: 600px !important;
-
 }
 .slick-list {
   position: relative;
@@ -81,7 +76,6 @@ h1{
     margin: 0 !important;
     padding: 50px 0 !important;
     height: 560px !important;
-
   }
 
   .carousel-img {
@@ -91,13 +85,13 @@ h1{
     border-radius: 20px !important;
     position: relative !important;
     margin-left: 12px !important;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
 
   .carousel-img .inner-box {
     border-radius: 20px !important;
     height: 500px !important;
-    padding: 30px;   
+    padding: 30px;
   }
 }
 .carousel-img {
@@ -107,8 +101,8 @@ h1{
   max-width: 370px !important;
   border-radius: 20px !important;
   position: relative !important;
-  margin: 0 auto 15px auto !important; /* Updated margin */
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+  margin: 0 auto 15px auto !important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .carousel-img .inner-box {
@@ -116,8 +110,6 @@ h1{
   height: 500px !important;
   padding: 30px;
 }
-
-
 
 .bg-centered-hero {
   animation: fadeInAnimation 2.5s ease;
@@ -164,4 +156,3 @@ h1{
     transform: translate(-50%) scale(1);
   }
 }
-
